{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 58,
  "lineage": "3e09802f-d647-87ef-2495-39370a105e40",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cfdb8dcaaf3cf2ab",
            "arn": "arn:aws:ec2:eu-north-1:460896925497:elastic-ip/eipalloc-0cfdb8dcaaf3cf2ab",
            "association_id": "eipassoc-0eadc1306e11e041d",
            "domain": "vpc",
            "id": "eipalloc-0cfdb8dcaaf3cf2ab",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0eb08a97b0a024791",
            "private_dns": "ip-10-0-1-165.eu-north-1.compute.internal",
            "private_ip": "10.0.1.165",
            "public_dns": "ec2-13-53-215-38.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.215.38",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "NEt_EIP"
            },
            "tags_all": {
              "Name": "NEt_EIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Backup_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c1762b0f609d3b9",
            "arn": "arn:aws:ec2:eu-north-1:460896925497:instance/i-0fd7bc2ce93454d62",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-Backup-S3-Role",
            "id": "i-0fd7bc2ce93454d62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Salah_Test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d3db2e7d39932e76"
              }
            ],
            "primary_network_interface_id": "eni-0d3db2e7d39932e76",
            "private_dns": "ip-10-0-2-39.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.39",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02188b3f4b330580b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079ed49b3e0dc691b",
            "tags": {
              "Name": "EC2_Backup_Server"
            },
            "tags_all": {
              "Name": "EC2_Backup_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0faf2bc40d0280faf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "i-0fd7bc2ce93454d62",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.EC2-Backup-S3-Role",
            "aws_security_group.SG_Backup_Server",
            "aws_subnet.EC2_Backup_Server",
            "aws_vpc.Terraform_Test_Salah",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.availability",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08c1762b0f609d3b9",
            "arn": "arn:aws:ec2:eu-north-1:460896925497:instance/i-0e390dc8416cc73ca",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-Backup-S3-Role",
            "id": "i-0e390dc8416cc73ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Salah_Test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0df75105794cf4e05"
              }
            ],
            "primary_network_interface_id": "eni-0df75105794cf4e05",
            "private_dns": "ip-10-0-1-242.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.242",
            "public_ip": "13.61.152.32",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-070f12d4c14cf9d54",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01eb4086b1ebc61f3",
            "tags": {
              "Name": "EC2_Web_Server"
            },
            "tags_all": {
              "Name": "EC2_Web_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a60f4fc24fe0626"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "i-0e390dc8416cc73ca",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.EC2-Backup-S3-Role",
            "aws_security_group.SG_Web_Server",
            "aws_subnet.EC2_Web_Server",
            "aws_vpc.Terraform_Test_Salah",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.availability",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:internet-gateway/igw-0e054b32bede061d8",
            "id": "igw-0e054b32bede061d8",
            "owner_id": "460896925497",
            "region": "eu-north-1",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-05e266cf1ee022712"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Terraform_Test_Salah"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw_Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cfdb8dcaaf3cf2ab",
            "association_id": "eipassoc-0eadc1306e11e041d",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ae248b48b6ad9955",
            "network_interface_id": "eni-0eb08a97b0a024791",
            "private_ip": "10.0.1.165",
            "public_ip": "13.53.215.38",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01eb4086b1ebc61f3",
            "tags": {
              "Name": "gw_Nat"
            },
            "tags_all": {
              "Name": "gw_Nat"
            },
            "vpc_id": "vpc-05e266cf1ee022712"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_subnet.EC2_Web_Server",
            "aws_vpc.Terraform_Test_Salah",
            "data.aws_availability_zones.availability"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_Table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:route-table/rtb-05c5bfc3d2aa69219",
            "id": "rtb-05c5bfc3d2aa69219",
            "owner_id": "460896925497",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ae248b48b6ad9955",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_Private"
            },
            "tags_all": {
              "Name": "Route_Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e266cf1ee022712"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "rtb-05c5bfc3d2aa69219",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw_Nat",
            "aws_subnet.EC2_Web_Server",
            "aws_vpc.Terraform_Test_Salah",
            "data.aws_availability_zones.availability"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_Table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:route-table/rtb-04adbb9fc1ac0a320",
            "id": "rtb-04adbb9fc1ac0a320",
            "owner_id": "460896925497",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e054b32bede061d8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_Public"
            },
            "tags_all": {
              "Name": "Route_Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e266cf1ee022712"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "rtb-04adbb9fc1ac0a320",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Terraform_Test_Salah"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1e06cb62d58160c",
            "region": "eu-north-1",
            "route_table_id": "rtb-04adbb9fc1ac0a320",
            "subnet_id": "subnet-01eb4086b1ebc61f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route_Table_public",
            "aws_subnet.EC2_Web_Server",
            "aws_vpc.Terraform_Test_Salah",
            "data.aws_availability_zones.availability"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bff7c34fc748367f",
            "region": "eu-north-1",
            "route_table_id": "rtb-05c5bfc3d2aa69219",
            "subnet_id": "subnet-079ed49b3e0dc691b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw_Nat",
            "aws_route_table.route_Table_private",
            "aws_subnet.EC2_Backup_Server",
            "aws_subnet.EC2_Web_Server",
            "aws_vpc.Terraform_Test_Salah",
            "data.aws_availability_zones.availability"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_Backup_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:security-group/sg-0faf2bc40d0280faf",
            "description": "Allow inbound traffic and all outbound traffic for Private Subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0faf2bc40d0280faf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a60f4fc24fe0626"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_Backup_Server",
            "name_prefix": "",
            "owner_id": "460896925497",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_Backup_Server"
            },
            "tags_all": {
              "Name": "SG_Backup_Server"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e266cf1ee022712"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "sg-0faf2bc40d0280faf",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Test_Salah"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_Web_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:security-group/sg-08a60f4fc24fe0626",
            "description": "Allow inbound traffic and all outbound traffic for Public Subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a60f4fc24fe0626",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "41.236.110.249/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_Web_Server",
            "name_prefix": "",
            "owner_id": "460896925497",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_Web_Server"
            },
            "tags_all": {
              "Name": "SG_Web_Server"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e266cf1ee022712"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "sg-08a60f4fc24fe0626",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Test_Salah"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "EC2_Backup_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:subnet/subnet-079ed49b3e0dc691b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079ed49b3e0dc691b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460896925497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "EC2_Backup_Server"
            },
            "tags_all": {
              "Name": "EC2_Backup_Server"
            },
            "vpc_id": "vpc-05e266cf1ee022712"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "subnet-079ed49b3e0dc691b",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Test_Salah",
            "data.aws_availability_zones.availability"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "EC2_Web_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:subnet/subnet-01eb4086b1ebc61f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eb4086b1ebc61f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460896925497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "EC2_Web_Server"
            },
            "tags_all": {
              "Name": "EC2_Web_Server"
            },
            "vpc_id": "vpc-05e266cf1ee022712"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "subnet-01eb4086b1ebc61f3",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Test_Salah",
            "data.aws_availability_zones.availability"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terraform_Test_Salah",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:vpc/vpc-05e266cf1ee022712",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa063cfdd46b1ba0",
            "default_route_table_id": "rtb-00aae04642c6af203",
            "default_security_group_id": "sg-0dd025a632fc4be5a",
            "dhcp_options_id": "dopt-0aed4c67e8c3fd14d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e266cf1ee022712",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00aae04642c6af203",
            "owner_id": "460896925497",
            "region": "eu-north-1",
            "tags": {
              "Name": "Terraform_Test_Salah"
            },
            "tags_all": {
              "Name": "Terraform_Test_Salah"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "vpc-05e266cf1ee022712",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:vpc-endpoint/vpce-0b914ffd368aeaf56",
            "cidr_blocks": [
              "52.95.170.0/23",
              "3.5.216.0/22",
              "52.95.169.0/24",
              "16.12.10.0/23",
              "16.12.9.0/24"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b914ffd368aeaf56",
            "ip_address_type": "ipv4",
            "owner_id": "460896925497",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-c3aa4faa",
            "private_dns_enabled": false,
            "region": "eu-north-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-05c5bfc3d2aa69219"
            ],
            "service_name": "com.amazonaws.eu-north-1.s3",
            "service_region": "eu-north-1",
            "state": "available",
            "tags": {
              "Name": "S3-Endpoint-Gateway"
            },
            "tags_all": {
              "Name": "S3-Endpoint-Gateway"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05e266cf1ee022712"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "vpce-0b914ffd368aeaf56",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Test_Salah"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:security-group-rule/sgr-0ff15264cec076ea3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ff15264cec076ea3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0faf2bc40d0280faf",
            "security_group_rule_id": "sgr-0ff15264cec076ea3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "sgr-0ff15264cec076ea3",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.SG_Backup_Server",
            "aws_vpc.Terraform_Test_Salah"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:security-group-rule/sgr-0ca83f20b83268e7d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ca83f20b83268e7d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-08a60f4fc24fe0626",
            "security_group_rule_id": "sgr-0ca83f20b83268e7d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "sgr-0ca83f20b83268e7d",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.SG_Web_Server",
            "aws_vpc.Terraform_Test_Salah"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:security-group-rule/sgr-0c8d36c7368816522",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c8d36c7368816522",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-08a60f4fc24fe0626",
            "security_group_rule_id": "sgr-0c8d36c7368816522",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "sgr-0c8d36c7368816522",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.SG_Web_Server",
            "aws_vpc.Terraform_Test_Salah"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:security-group-rule/sgr-0cab4fc0446fd6c09",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0cab4fc0446fd6c09",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-08a60f4fc24fe0626",
            "security_group_rule_id": "sgr-0cab4fc0446fd6c09",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "sgr-0cab4fc0446fd6c09",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.SG_Web_Server",
            "aws_vpc.Terraform_Test_Salah"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:security-group-rule/sgr-0ac8f92d656d8ce97",
            "cidr_ipv4": "41.236.110.249/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ac8f92d656d8ce97",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-08a60f4fc24fe0626",
            "security_group_rule_id": "sgr-0ac8f92d656d8ce97",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "sgr-0ac8f92d656d8ce97",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.SG_Web_Server",
            "aws_vpc.Terraform_Test_Salah",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_for-SG_Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:security-group-rule/sgr-03d8f389dc20deb1e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03d8f389dc20deb1e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-08a60f4fc24fe0626",
            "region": "eu-north-1",
            "security_group_id": "sg-0faf2bc40d0280faf",
            "security_group_rule_id": "sgr-03d8f389dc20deb1e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "sgr-03d8f389dc20deb1e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.SG_Backup_Server",
            "aws_security_group.SG_Web_Server",
            "aws_vpc.Terraform_Test_Salah"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_backup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:460896925497:security-group-rule/sgr-0d13c08bd15ca5bc1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d13c08bd15ca5bc1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0faf2bc40d0280faf",
            "region": "eu-north-1",
            "security_group_id": "sg-08a60f4fc24fe0626",
            "security_group_rule_id": "sgr-0d13c08bd15ca5bc1",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460896925497",
            "id": "sgr-0d13c08bd15ca5bc1",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.SG_Backup_Server",
            "aws_security_group.SG_Web_Server",
            "aws_vpc.Terraform_Test_Salah"
          ]
        }
      ]
    }
  ]
}